--- a/thanks.html
+++ b/thanks.html
@@ -39,11 +39,7 @@
         },
       };
     </script>
-    <style>
-      :where([class^="ri-"])::before {
-          content: "\f3c2";
-      }
-    </style>
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body class="bg-gray-50 min-h-screen flex items-center justify-center">
     <div class="max-w-2xl mx-auto px-6 py-12">
