ファイル構造をシンプルに変更
- style.css と main.js をルートディレクトリに移動
- css/ と js/ フォルダを削除してシンプルな構造に
- HTMLファイルのパス参照を更新
- 小規模サイトに適した管理しやすい構造に改善

--- a/thanks.html
+++ b/thanks.html
@@ -39,7 +39,7 @@
         },
       };
     </script>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body class="bg-gray-50 min-h-screen flex items-center justify-center">
     <div class="max-w-2xl mx-auto px-6 py-12">
