--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         },
       };
     </script>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body class="bg-white">
     <!-- ヘッダー -->
@@ -1085,6 +1085,6 @@
     </footer>
 
     <!-- メインJavaScript -->
-    <script src="js/main.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
