--- a/services.html
+++ b/services.html
@@ -39,7 +39,7 @@
         },
       };
     </script>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body class="bg-white">
     <header
@@ -1536,6 +1536,6 @@
     </footer>
 
     <!-- メインJavaScript -->
-    <script src="js/main.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
